# uk-police-api

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
src/: client.rs  error.rs  lib.rs
src/models/: crime.rs  force.rs  mod.rs  neighbourhood.rs  stop_and_search.rs
tests/: integration.rs
