[package]
name = "uk-police-api"
version = "0.4.1"
edition = "2024"
rust-version = "1.85"
description = "A Rust wrapper for the UK Police API"
license = "MIT"
authors = ["Lawand Othman <lwnd@pm.me>"]
keywords = ["police", "uk", "api", "crime"]
categories = ["api-bindings"]
repository = "https://github.com/lawandothman/uk-police-api"
documentation = "https://docs.rs/uk-police-api"
readme = "README.md"

[dependencies]
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"

[dev-dependencies]
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
wiremock = "0.6.5"
